Fix header tag from h1 to h2. Header width for desktop bold. Font of paragraph to 300 and change letter-spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ main {
   max-width: 450px;
   border-radius: 10px;
   font-size: 0.822rem;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 1.5;
   position: relative;
   flex-direction: column;
@@ -62,7 +62,7 @@ header {
   height: 30vh;
 }
 
-h1 {
+h2 {
   font-size: 1rem;
   margin: 1rem 0;
   font-weight: 700;
@@ -71,6 +71,7 @@ h1 {
 
 p {
   line-height: 1.5;
+  letter-spacing: .25px;
 }
 
 .article-img {
@@ -227,9 +228,9 @@ p {
     padding: 2rem 0;
   }
 
-  h1 {
+  h2 {
     font-size: 1.1875rem;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 0.0625rem;
     margin-top: 0;
   }
